<resources>
    <string name="app_name">News</string>

    <!-- Text to display in the list when there are no articles [CHAR LIMIT=NONE] -->
    <string name="no_articles">No articles found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Title for the NavigationView Menu [CHAR LIMIT=NONE] -->
    <string name="Nav_Menu_Title">Sections</string>

    <!-- Title for the Trending Section of the Nav Menu [CHAR LIMIT=NONE] -->
    <string name="Trending_Title">Trending</string>

    <!-- Title for the Trending Section of the Nav Menu [CHAR LIMIT=NONE] -->
    <string name="Test_Title">Test</string>
    <string name="news_sections">News Categories</string>

    <!-- Content Descriptions -->
    <string name="content_desc_article_image">Image from articles image url</string>

    <!-- Source for articleImage -->
    <string name="article_image_source">Source: </string>
    <string name="article_image_source_url_placeholder">Url Placeholder</string>

    <!-- login and register -->
    <string name="login_btn_txt">LOGIN</string>
    <string name="register_btn_txt">REGISTER</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="register_user_btn">Register</string>
    <string name="login_user_btn">Login</string>
    <string name="logout_btn_txt">LOGOUT</string>

</resources>
