<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.cpearce.newsfeed.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_txt"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="100dp"
        tools:text="@string/email_txt" />

    <EditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="44dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_txt"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:text="@string/password_txt" />

    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="134dp" />

    <Button
        android:id="@+id/btnLoginUserr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnLoginUser_Click"
        android:text="@string/login_user_btn" />

</LinearLayout>
